// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ToggleButtonGroup Error 1`] = `
<div>
  <label
    className="MuiFormLabel-root MuiInputLabel-root InputLabel-root-196 MuiInputLabel-animated"
  >
    What room type would you prefer?
  </label>
  <div>
    <div
      className="MuiToggleButtonGroup-root"
      role="group"
    >
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-222 MuiToggleButtonGroup-grouped makeStyles-grouped-217"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="1"
      >
        <span
          className="MuiToggleButton-label"
        >
          1h
        </span>
      </button>
      <button
        aria-pressed={true}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-222 MuiToggleButtonGroup-grouped makeStyles-grouped-217 Mui-selected makeStyles-selected-223"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="2"
      >
        <span
          className="MuiToggleButton-label"
        >
          2h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-222 MuiToggleButtonGroup-grouped makeStyles-grouped-217"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="3"
      >
        <span
          className="MuiToggleButton-label"
        >
          3h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-222 MuiToggleButtonGroup-grouped makeStyles-grouped-217"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="4"
      >
        <span
          className="MuiToggleButton-label"
        >
          4h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-222 MuiToggleButtonGroup-grouped makeStyles-grouped-217"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="5"
      >
        <span
          className="MuiToggleButton-label"
        >
          5h
        </span>
      </button>
    </div>
    <p
      className="MuiFormHelperText-root FormHelperText-helperText-233 FormHelperText-error-234 Mui-error"
    >
      Error!
    </p>
  </div>
</div>
`;

exports[`Storyshots ToggleButtonGroup Exclusive group 1`] = `
<div>
  <label
    className="MuiFormLabel-root MuiInputLabel-root InputLabel-root-38 MuiInputLabel-animated"
  >
    What room type would you prefer?
  </label>
  <div>
    <div
      className="MuiToggleButtonGroup-root"
      role="group"
    >
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-64 MuiToggleButtonGroup-grouped makeStyles-grouped-59"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="1"
      >
        <span
          className="MuiToggleButton-label"
        >
          1h
        </span>
      </button>
      <button
        aria-pressed={true}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-64 MuiToggleButtonGroup-grouped makeStyles-grouped-59 Mui-selected makeStyles-selected-65"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="2"
      >
        <span
          className="MuiToggleButton-label"
        >
          2h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-64 MuiToggleButtonGroup-grouped makeStyles-grouped-59"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="3"
      >
        <span
          className="MuiToggleButton-label"
        >
          3h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-64 MuiToggleButtonGroup-grouped makeStyles-grouped-59"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="4"
      >
        <span
          className="MuiToggleButton-label"
        >
          4h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-64 MuiToggleButtonGroup-grouped makeStyles-grouped-59"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="5"
      >
        <span
          className="MuiToggleButton-label"
        >
          5h
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots ToggleButtonGroup Non-exclusive group 1`] = `
<div>
  <label
    className="MuiFormLabel-root MuiInputLabel-root InputLabel-root-112 MuiInputLabel-animated"
  >
    What room type would you prefer?
  </label>
  <div>
    <div
      className="MuiToggleButtonGroup-root"
      role="group"
    >
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-138 MuiToggleButtonGroup-grouped makeStyles-grouped-133"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="1"
      >
        <span
          className="MuiToggleButton-label"
        >
          1h
        </span>
      </button>
      <button
        aria-pressed={true}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-138 MuiToggleButtonGroup-grouped makeStyles-grouped-133 Mui-selected makeStyles-selected-139"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="2"
      >
        <span
          className="MuiToggleButton-label"
        >
          2h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-138 MuiToggleButtonGroup-grouped makeStyles-grouped-133"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="3"
      >
        <span
          className="MuiToggleButton-label"
        >
          3h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-138 MuiToggleButtonGroup-grouped makeStyles-grouped-133"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="4"
      >
        <span
          className="MuiToggleButton-label"
        >
          4h
        </span>
      </button>
      <button
        aria-pressed={false}
        className="MuiButtonBase-root MuiToggleButton-root makeStyles-root-138 MuiToggleButtonGroup-grouped makeStyles-grouped-133"
        disabled={false}
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
        value="5"
      >
        <span
          className="MuiToggleButton-label"
        >
          5h
        </span>
      </button>
    </div>
  </div>
</div>
`;
